--- a/Cory Clicker/Cory Clicker.csproj
+++ b/Cory Clicker/Cory Clicker.csproj
@@ -82,5 +82,8 @@
   <ItemGroup>
     <None Include="Resources\Whitehouse.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\153085555815845295.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
